# sci_comp_exercises

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  code_format.sh
include/: io.hpp  matrix.hpp  mpi.hpp
src/: 01_0130_kahan_summation.cpp  01_0208_shift_and_subtract_division.cpp  01_0509_jacobi_method.cpp  01_0923_jacobi_method.cpp  01_1003_uniform_distribution_on_sphere.cpp  01_1003_uniform_distribution_on_sphere.sh  01_1011_ising_model.cpp  01_1011_ising_model_lattice.sh  01_1011_ising_model_params.sh  01_10_03_uniform_distribution_on_sphere.sh  02_06_multiresolution_analysis.cpp  02_06_multiresolution_analysis_daubechies.sh  02_06_multiresolution_analysis_schauder.sh
src/mpi/: 20_4_4_mpi_mat_mat_multiplication.cpp  20_ex4_4_mat_mat_multiplication.cpp  20_ex4_4_mpi_mat_mat_multiplication.cpp  mat_mat_multiplication.cpp
src/seq/: 01_01_30_kahan_summation.cpp  01_02_08_shift_and_subtract_division.cpp  01_05_09_jacobi_method.cpp  01_09_23_jacobi_method.cpp  01_10_03_uniform_distribution_on_sphere.cpp  01_10_03_uniform_distribution_on_sphere.sh  01_10_11_ising_model.cpp  01_10_11_ising_model_lattice.sh  01_10_11_ising_model_params.sh  02_06_multiresolution_analysis.cpp  02_06_multiresolution_analysis_daubechies.sh  02_06_multiresolution_analysis_haar.sh  02_06_multiresolution_analysis_schauder.sh  03_5_2_5_given_qr_factorization.cpp  kahan_summation.cpp
src/seq/basics/: shift_and_subtract_division.cpp
src/seq/basics/ieee754/: ieee754.hpp  info.cpp  ulps.cpp
src/seq/basics/shift_and_subtract_division/: README.md  shift_and_subtract_division.cpp
src/seq/basics/summation/: exp_taylor_series.cpp  kahan_summation.cpp
src/seq/eigen/: jacobi.cpp  jacobi_method.cpp
src/seq/eigen/jacobi/: README.md  jacobi.cpp
src/seq/lin/: given_qr_factorization.cpp
src/seq/lin/given_qr_factorization/: README.md  given_qr_factorization.cpp
src/seq/lin/iterative_methods/: grid.hpp  plot_solution.sh  (+6 more)
(+66 files in other folders)
